Minimal UI: fix player clothing display overlapping menu dropup

--- a/css/spni.css
+++ b/css/spni.css
@@ -2182,9 +2182,9 @@ body.modal-open {
     position: absolute;
     
     right: 57%;
-    bottom: 4%;
+    bottom: 3.5%;
     
-    /*width: 33%;*/
+    width: 33%;
     transform: none;
     
     transition-property: height, transform;
@@ -2213,7 +2213,7 @@ body.modal-open {
 }
 
 .small-clothing-image-container {
-    width: 8.5%;
+    width: 12.5%;
     height: auto;
     margin-left: 1%;
     transform: none;
@@ -2224,7 +2224,7 @@ body.modal-open {
 
 
 #player-game-clothing-area-minimal:hover .small-clothing-image-container, #player-game-clothing-area-minimal:active .small-clothing-image-container {
-    width: 12.5%;
+    width: 20%;
     
     transition-property: width;
     transition-duration: 0.5s;
